--- a/config.ini.example
+++ b/config.ini.example
@@ -36,6 +36,19 @@ cache_enabled = true
 # 缓存大小限制 (MB)
 max_cache_size = 1024
 
+# 临时文件存储模式 (v1.1.0+)
+# - disk: 传统磁盘文件方式 (稳定，低内存占用，兼容所有场景)
+# - memory: 内存处理 (更快，减少磁盘I/O，需要足够RAM)
+# - hybrid: 智能选择 (推荐，小文件用内存，大文件用磁盘)
+storage_mode = hybrid
+
+# 混合模式阈值 (MB)，文件大于此值使用磁盘模式
+memory_threshold = 100
+
+# 内存安全缓冲区 (MB)，确保系统有足够可用内存
+# 系统可用内存必须 > (文件大小 + 此缓冲区) 才使用内存模式
+memory_buffer = 100
+
 # 配置说明和使用指南
 # 
 # 1. 基本配置:
